[gd_scene load_steps=17 format=3 uid="uid://2wpke5l0velw"]

[ext_resource type="Script" path="res://Tasks/TaskTest.gd" id="1_t3p00"]
[ext_resource type="Script" path="res://Tasks/Task.gd" id="2_o3aat"]
[ext_resource type="Script" path="res://Tasks/Sequence.gd" id="3_7lea6"]
[ext_resource type="Script" path="res://Tasks/Blocks/BlocksToolkit.gd" id="3_46byr"]
[ext_resource type="Script" path="res://Tasks/UntilSuccess.gd" id="4_kt07q"]
[ext_resource type="Script" path="res://Tasks/LeafTasks/Position/PositionTask.gd" id="5_8x5kp"]
[ext_resource type="Script" path="res://Unit/Components/Motor/MoveTo/MoveToTask.gd" id="6_h5iij"]
[ext_resource type="Script" path="res://Unit/Components/Scanner/ScanFor/ScanForTask.gd" id="8_ouol0"]

[sub_resource type="Resource" id="Resource_p5bop"]
script = ExtResource("8_ouol0")
children = Array[ExtResource("2_o3aat")]([])

[sub_resource type="Resource" id="Resource_cd4qj"]
script = ExtResource("6_h5iij")
children = Array[ExtResource("2_o3aat")]([SubResource("Resource_p5bop")])

[sub_resource type="Resource" id="Resource_ig1hb"]
script = ExtResource("3_7lea6")
children = Array[ExtResource("2_o3aat")]([SubResource("Resource_cd4qj")])

[sub_resource type="Resource" id="Resource_wtgrb"]
script = ExtResource("4_kt07q")
children = Array[ExtResource("2_o3aat")]([])

[sub_resource type="Resource" id="Resource_74ocf"]
script = ExtResource("2_o3aat")
children = Array[ExtResource("2_o3aat")]([])

[sub_resource type="Resource" id="Resource_8566j"]
script = ExtResource("5_8x5kp")
children = Array[ExtResource("2_o3aat")]([])

[sub_resource type="Resource" id="Resource_r5mxl"]
script = ExtResource("6_h5iij")
children = Array[ExtResource("2_o3aat")]([])

[sub_resource type="Resource" id="Resource_bypdh"]
script = ExtResource("8_ouol0")
children = Array[ExtResource("2_o3aat")]([])

[node name="TaskTest" type="Node2D"]
script = ExtResource("1_t3p00")
task = SubResource("Resource_ig1hb")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Toolkit" type="VBoxContainer" parent="HBoxContainer/PanelContainer"]
layout_mode = 2
script = ExtResource("3_46byr")
tasks = Array[ExtResource("2_o3aat")]([SubResource("Resource_wtgrb"), SubResource("Resource_74ocf"), SubResource("Resource_8566j"), SubResource("Resource_r5mxl"), SubResource("Resource_bypdh")])

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="TaskList" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Step" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Step"

[node name="Reset" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Reset"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/Step" to="." method="_on_step_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/Reset" to="." method="_on_reset_pressed"]
